@@ -52,6 +52,7 @@ A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
 ........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)
 
 Bug fixes:
+A......... [ZBX-5111] fixed child trigger data reset after changes in parent trigger (Oleg)
 A......... [ZBX-5742] fixed trigger order_result in item and item prototype (Oleg)
 ..F....... [ZBX-5754] fixed English strings in trigger expression helper (Oleg)
 ..F....... [ZBX-5700] added permission checks in frontend (Oleg)
